--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="primaryColor">#FF000000</color>
+    <color name="primaryLightColor">#1b1b1b</color>
+    <color name="primaryDarkColor">#FF000000</color>
+
+    <color name="secondaryColor">#59757575</color>
+    <color name="secondaryLightColor">#fffff7</color>
+    <color name="secondaryDarkColor">#59757575</color>
+
+    <color name="textColor">#212121</color>
+
+    <color name="iconTint">#1b1b1b</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red500">#f44336</color>
+    <color name="green500">#4caf50</color>
+
+    <!--Neutral-->
+    <color name="neutral16">#292929</color>
+    <color name="neutral48">#FF868686</color>
+    <color name="neutral48Opacity">#59757575</color>
+    <color name="neutral72">#B8B8B8</color>
+    <color name="neutral88">#E0E0E0</color>
+    <color name="neutral88Opacity">#218686E0</color>
+    <color name="neutral98">#FAFAFA</color>
+    <color name="neutralWhite">#FFFFFFFF</color>
+    <color name="neutralYellow">#DFD690</color>
+    <color name="neutralYellowPure">#FFDC22</color>
+    <color name="neutralBlueDark">#0158A4</color>
+    <color name="neutralOrangeDark">#F79736</color>
 </resources>
