--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="size_large">64dp</dimen>
+    <dimen name="size_semi">32dp</dimen>
+    <dimen name="size_standard">24dp</dimen>
+    <dimen name="size_small">16dp</dimen>
+
+    <dimen name="size_elevation">10dp</dimen>
+
+    <dimen name="spacing_x_large">64dp</dimen>
+    <dimen name="spacing_large">48dp</dimen>
+    <dimen name="spacing_semi">32dp</dimen>
+    <dimen name="spacing_standard">24dp</dimen>
+    <dimen name="spacing_small">16dp</dimen>
+    <dimen name="spacing_little">12dp</dimen>
+    <dimen name="spacing_tiny">8dp</dimen>
+    <dimen name="spacing_micro">4dp</dimen>
+
+    <dimen name="text_size_large">32sp</dimen>
+    <dimen name="text_size_semi">24sp</dimen>
+    <dimen name="text_size_standard">20sp</dimen>
+    <dimen name="text_size_small">16sp</dimen>
+    <dimen name="text_size_tiny">12sp</dimen>
+
+    <dimen name="border_standard">1dp</dimen>
+    <dimen name="border_thick">2dp</dimen>
+
+    <dimen name="radius_large">8dp</dimen>
 </resources>
